# stacja-pogody

./: .gitignore  README.md
raspberry/: reader.py
sensor_station/: CMakeLists.txt  prj.conf
sensor_station/boards/: nrf52dk_nrf52832.overlay
sensor_station/src/: ess.c  ess.h  main.c
